tests/suite/snapshots/suite__case_nat4.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: MappingValue
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: Separator
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: SingleQuote
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: ScalarSpace
  start:
    line: 1
    column: 4
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: SingleQuoted
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 2
- token: SingleQuote
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Break
  start:
    line: 2
    column: 3
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: Scalar
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: MappingValue
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 2
- token: Separator
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 3
- token: SingleQuote
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 4
- token: Separator
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 6
- token: ScalarSpace
  start:
    line: 3
    column: 6
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Separator
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 2
- token: SingleQuoted
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 2
- token: SingleQuote
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 3
- token: Break
  start:
    line: 4
    column: 3
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: Scalar
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 1
- token: MappingValue
  start:
    line: 5
    column: 1
  end:
    line: 5
    column: 2
- token: Separator
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 3
- token: DoubleQuote
  start:
    line: 5
    column: 3
  end:
    line: 5
    column: 4
- token: ScalarSpace
  start:
    line: 5
    column: 4
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 1
- token: Separator
  start:
    line: 6
    column: 1
  end:
    line: 6
    column: 2
- token: DoubleQuoted
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 2
- token: DoubleQuote
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 3
- token: Break
  start:
    line: 6
    column: 3
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 0
- token: Scalar
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 1
- token: MappingValue
  start:
    line: 7
    column: 1
  end:
    line: 7
    column: 2
- token: Separator
  start:
    line: 7
    column: 2
  end:
    line: 7
    column: 3
- token: DoubleQuote
  start:
    line: 7
    column: 3
  end:
    line: 7
    column: 4
- token: Separator
  start:
    line: 7
    column: 4
  end:
    line: 7
    column: 6
- token: ScalarSpace
  start:
    line: 7
    column: 6
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 1
- token: Separator
  start:
    line: 8
    column: 1
  end:
    line: 8
    column: 2
- token: DoubleQuoted
  start:
    line: 8
    column: 2
  end:
    line: 8
    column: 2
- token: DoubleQuote
  start:
    line: 8
    column: 2
  end:
    line: 8
    column: 3
- token: Break
  start:
    line: 8
    column: 3
  end:
    line: 9
    column: 0
- token: Indent
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 0
- token: Scalar
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 1
- token: MappingValue
  start:
    line: 9
    column: 1
  end:
    line: 9
    column: 2
- token: Separator
  start:
    line: 9
    column: 2
  end:
    line: 9
    column: 3
- token: SingleQuote
  start:
    line: 9
    column: 3
  end:
    line: 9
    column: 4
- token: Break
  start:
    line: 9
    column: 4
  end:
    line: 10
    column: 0
- token: Indent
  start:
    line: 10
    column: 0
  end:
    line: 10
    column: 0
- token: ScalarBreak
  start:
    line: 10
    column: 0
  end:
    line: 11
    column: 0
- token: Indent
  start:
    line: 11
    column: 0
  end:
    line: 11
    column: 1
- token: Separator
  start:
    line: 11
    column: 1
  end:
    line: 11
    column: 2
- token: SingleQuoted
  start:
    line: 11
    column: 2
  end:
    line: 11
    column: 2
- token: SingleQuote
  start:
    line: 11
    column: 2
  end:
    line: 11
    column: 3
- token: Break
  start:
    line: 11
    column: 3
  end:
    line: 12
    column: 0
- token: Indent
  start:
    line: 12
    column: 0
  end:
    line: 12
    column: 0
- token: Scalar
  start:
    line: 12
    column: 0
  end:
    line: 12
    column: 1
- token: MappingValue
  start:
    line: 12
    column: 1
  end:
    line: 12
    column: 2
- token: Separator
  start:
    line: 12
    column: 2
  end:
    line: 12
    column: 3
- token: DoubleQuote
  start:
    line: 12
    column: 3
  end:
    line: 12
    column: 4
- token: Break
  start:
    line: 12
    column: 4
  end:
    line: 13
    column: 0
- token: Indent
  start:
    line: 13
    column: 0
  end:
    line: 13
    column: 0
- token: ScalarBreak
  start:
    line: 13
    column: 0
  end:
    line: 14
    column: 0
- token: Indent
  start:
    line: 14
    column: 0
  end:
    line: 14
    column: 1
- token: Separator
  start:
    line: 14
    column: 1
  end:
    line: 14
    column: 2
- token: DoubleQuoted
  start:
    line: 14
    column: 2
  end:
    line: 14
    column: 2
- token: DoubleQuote
  start:
    line: 14
    column: 2
  end:
    line: 14
    column: 3
- token: Break
  start:
    line: 14
    column: 3
  end:
    line: 15
    column: 0
- token: Indent
  start:
    line: 15
    column: 0
  end:
    line: 15
    column: 0
- token: Scalar
  start:
    line: 15
    column: 0
  end:
    line: 15
    column: 1
- token: MappingValue
  start:
    line: 15
    column: 1
  end:
    line: 15
    column: 2
- token: Separator
  start:
    line: 15
    column: 2
  end:
    line: 15
    column: 3
- token: SingleQuote
  start:
    line: 15
    column: 3
  end:
    line: 15
    column: 4
- token: Break
  start:
    line: 15
    column: 4
  end:
    line: 16
    column: 0
- token: Indent
  start:
    line: 16
    column: 0
  end:
    line: 16
    column: 0
- token: ScalarBreak
  start:
    line: 16
    column: 0
  end:
    line: 17
    column: 0
- token: Indent
  start:
    line: 17
    column: 0
  end:
    line: 17
    column: 0
- token: ScalarBreak
  start:
    line: 17
    column: 0
  end:
    line: 18
    column: 0
- token: Indent
  start:
    line: 18
    column: 0
  end:
    line: 18
    column: 1
- token: Separator
  start:
    line: 18
    column: 1
  end:
    line: 18
    column: 2
- token: SingleQuoted
  start:
    line: 18
    column: 2
  end:
    line: 18
    column: 2
- token: SingleQuote
  start:
    line: 18
    column: 2
  end:
    line: 18
    column: 3
- token: Break
  start:
    line: 18
    column: 3
  end:
    line: 19
    column: 0
- token: Indent
  start:
    line: 19
    column: 0
  end:
    line: 19
    column: 0
- token: Scalar
  start:
    line: 19
    column: 0
  end:
    line: 19
    column: 1
- token: MappingValue
  start:
    line: 19
    column: 1
  end:
    line: 19
    column: 2
- token: Separator
  start:
    line: 19
    column: 2
  end:
    line: 19
    column: 3
- token: DoubleQuote
  start:
    line: 19
    column: 3
  end:
    line: 19
    column: 4
- token: Break
  start:
    line: 19
    column: 4
  end:
    line: 20
    column: 0
- token: Indent
  start:
    line: 20
    column: 0
  end:
    line: 20
    column: 0
- token: ScalarBreak
  start:
    line: 20
    column: 0
  end:
    line: 21
    column: 0
- token: Indent
  start:
    line: 21
    column: 0
  end:
    line: 21
    column: 0
- token: ScalarBreak
  start:
    line: 21
    column: 0
  end:
    line: 22
    column: 0
- token: Indent
  start:
    line: 22
    column: 0
  end:
    line: 22
    column: 1
- token: Separator
  start:
    line: 22
    column: 1
  end:
    line: 22
    column: 2
- token: DoubleQuoted
  start:
    line: 22
    column: 2
  end:
    line: 22
    column: 2
- token: DoubleQuote
  start:
    line: 22
    column: 2
  end:
    line: 22
    column: 3
- token: Break
  start:
    line: 22
    column: 3
  end:
    line: 23
    column: 0

