tests/suite/snapshots/suite__case_nhx8.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Empty
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: MappingValue
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Empty
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 1
    line: 0
    column: 1
- token: Break
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 7
    line: 3
    column: 0

