tests/suite/snapshots/suite__case_np9h.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: DoubleQuote
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: DoubleQuoted
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 7
    line: 0
    column: 7
- token: Separator
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 8
    line: 0
    column: 8
- token: ScalarSpace
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 10
    line: 1
    column: 0
- token: Indent
  start:
    index: 10
    line: 1
    column: 0
  end:
    index: 10
    line: 1
    column: 0
- token: DoubleQuoted
  start:
    index: 10
    line: 1
    column: 0
  end:
    index: 21
    line: 1
    column: 11
- token: Separator
  start:
    index: 21
    line: 1
    column: 11
  end:
    index: 22
    line: 1
    column: 12
- token: Break
  start:
    index: 22
    line: 1
    column: 12
  end:
    index: 24
    line: 2
    column: 0
- token: Indent
  start:
    index: 24
    line: 2
    column: 0
  end:
    index: 24
    line: 2
    column: 0
- token: Separator
  start:
    index: 24
    line: 2
    column: 0
  end:
    index: 25
    line: 2
    column: 1
- token: ScalarBreak
  start:
    index: 25
    line: 2
    column: 1
  end:
    index: 27
    line: 3
    column: 0
- token: Indent
  start:
    index: 27
    line: 3
    column: 0
  end:
    index: 27
    line: 3
    column: 0
- token: DoubleQuoted
  start:
    index: 27
    line: 3
    column: 0
  end:
    index: 47
    line: 3
    column: 20
- token: Escape
  start:
    index: 47
    line: 3
    column: 20
  end:
    index: 48
    line: 3
    column: 21
- token: Break
  start:
    index: 48
    line: 3
    column: 21
  end:
    index: 50
    line: 4
    column: 0
- token: Indent
  start:
    index: 50
    line: 4
    column: 0
  end:
    index: 50
    line: 4
    column: 0
- token: Separator
  start:
    index: 50
    line: 4
    column: 0
  end:
    index: 51
    line: 4
    column: 1
- token: Escape
  start:
    index: 51
    line: 4
    column: 1
  end:
    index: 52
    line: 4
    column: 2
- token: EscapeCode
  start:
    index: 52
    line: 4
    column: 2
  end:
    index: 53
    line: 4
    column: 3
- token: DoubleQuoted
  start:
    index: 53
    line: 4
    column: 3
  end:
    index: 65
    line: 4
    column: 15
- token: DoubleQuote
  start:
    index: 65
    line: 4
    column: 15
  end:
    index: 66
    line: 4
    column: 16
- token: Break
  start:
    index: 66
    line: 4
    column: 16
  end:
    index: 68
    line: 5
    column: 0

