tests/suite/snapshots/suite__case_p2ad.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Separator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Literal
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: Separator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Comment
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: CommentText
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 21
- token: Break
  start:
    line: 0
    column: 21
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Scalar
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 8
- token: ScalarBreak
  start:
    line: 1
    column: 8
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SequenceEntry
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Folded
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: IndentationIndicator
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 4
- token: Separator
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 5
- token: Comment
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 6
- token: CommentText
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 31
- token: Break
  start:
    line: 2
    column: 31
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Scalar
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 8
- token: ScalarBreak
  start:
    line: 3
    column: 8
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: SequenceEntry
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Separator
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 2
- token: Literal
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 3
- token: ChompingIndicator
  start:
    line: 4
    column: 3
  end:
    line: 4
    column: 4
- token: Separator
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 5
- token: Comment
  start:
    line: 4
    column: 5
  end:
    line: 4
    column: 6
- token: CommentText
  start:
    line: 4
    column: 6
  end:
    line: 4
    column: 28
- token: Break
  start:
    line: 4
    column: 28
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 1
- token: Scalar
  start:
    line: 5
    column: 1
  end:
    line: 5
    column: 5
- token: ScalarBreak
  start:
    line: 5
    column: 5
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: ScalarBreak
  start:
    line: 6
    column: 0
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 0
- token: SequenceEntry
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 1
- token: Separator
  start:
    line: 7
    column: 1
  end:
    line: 7
    column: 2
- token: Folded
  start:
    line: 7
    column: 2
  end:
    line: 7
    column: 3
- token: IndentationIndicator
  start:
    line: 7
    column: 3
  end:
    line: 7
    column: 4
- token: ChompingIndicator
  start:
    line: 7
    column: 4
  end:
    line: 7
    column: 5
- token: Separator
  start:
    line: 7
    column: 5
  end:
    line: 7
    column: 6
- token: Comment
  start:
    line: 7
    column: 6
  end:
    line: 7
    column: 7
- token: CommentText
  start:
    line: 7
    column: 7
  end:
    line: 7
    column: 26
- token: Break
  start:
    line: 7
    column: 26
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 1
- token: Scalar
  start:
    line: 8
    column: 1
  end:
    line: 8
    column: 7
- token: Break
  start:
    line: 8
    column: 7
  end:
    line: 9
    column: 0

