tests/suite/snapshots/suite__case_p76l.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Directive
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: DirectiveName
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 4
- token: Separator
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: TagHandle
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 7
- token: Separator
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 8
- token: TagPrefix
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 33
- token: Break
  start:
    line: 0
    column: 33
  end:
    line: 1
    column: 0
- token: DirectivesEnd
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 3
- token: Break
  start:
    line: 1
    column: 3
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: TagHandle
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: TagSuffix
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 5
- token: Separator
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 6
- token: Scalar
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 11
- token: Separator
  start:
    line: 2
    column: 11
  end:
    line: 2
    column: 12
- token: Comment
  start:
    line: 2
    column: 12
  end:
    line: 2
    column: 13
- token: CommentText
  start:
    line: 2
    column: 13
  end:
    line: 2
    column: 35
- token: Break
  start:
    line: 2
    column: 35
  end:
    line: 3
    column: 0

