tests/suite/snapshots/suite__case_p94k.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: MappingValue
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Separator
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 8
- token: Comment
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: CommentText
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 17
- token: Break
  start:
    line: 0
    column: 17
  end:
    line: 1
    column: 0
- token: Separator
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 8
- token: Comment
  start:
    line: 1
    column: 8
  end:
    line: 1
    column: 9
- token: CommentText
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 15
- token: Break
  start:
    line: 1
    column: 15
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Scalar
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 7
- token: Break
  start:
    line: 2
    column: 7
  end:
    line: 5
    column: 0

