tests/suite/snapshots/suite__case_pbj2.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 8
- token: MappingValue
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: Break
  start:
    line: 0
    column: 9
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 2
- token: SequenceEntry
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Separator
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: Scalar
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 18
- token: Break
  start:
    line: 1
    column: 18
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: SequenceEntry
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Separator
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 4
- token: Scalar
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 18
- token: Break
  start:
    line: 2
    column: 18
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: SequenceEntry
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 3
- token: Separator
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 4
- token: Scalar
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 20
- token: Break
  start:
    line: 3
    column: 20
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: Scalar
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 8
- token: MappingValue
  start:
    line: 4
    column: 8
  end:
    line: 4
    column: 9
- token: Break
  start:
    line: 4
    column: 9
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 2
- token: SequenceEntry
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 3
- token: Separator
  start:
    line: 5
    column: 3
  end:
    line: 5
    column: 4
- token: Scalar
  start:
    line: 5
    column: 4
  end:
    line: 5
    column: 17
- token: Break
  start:
    line: 5
    column: 17
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 2
- token: SequenceEntry
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 3
- token: Separator
  start:
    line: 6
    column: 3
  end:
    line: 6
    column: 4
- token: Scalar
  start:
    line: 6
    column: 4
  end:
    line: 6
    column: 16
- token: Break
  start:
    line: 6
    column: 16
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 2
- token: SequenceEntry
  start:
    line: 7
    column: 2
  end:
    line: 7
    column: 3
- token: Separator
  start:
    line: 7
    column: 3
  end:
    line: 7
    column: 4
- token: Scalar
  start:
    line: 7
    column: 4
  end:
    line: 7
    column: 18
- token: Break
  start:
    line: 7
    column: 18
  end:
    line: 8
    column: 0

